--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -37,7 +37,7 @@
                         <p:menuitem value=""/>
                         <p:menuitem value=""/>
                         <p:menuitem value=""/>
-                        <p:menuitem value="Logout" rendered="#{loggedIn}" action="#{logoutMBean.doLogout}" immediate="true"
+                        <p:menuitem value="Logout" id="logout" rendered="#{loggedIn}" action="#{logoutMBean.doLogout}" immediate="true"
                                     style="float: right"/>
 
                     </p:menubar>
