- wildfly deploy - updated to conventions 1.1.2

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -77,7 +77,7 @@
                             <td style="width:250px;">
                                 <h:outputLink target="_blank"
                                               value="http://conventions.github.io/home/">
-                                    Powered by Conventions #{conventionsVersion.version}
+                                    Powered by Conventions #{conventionsVersion}
                                 </h:outputLink>
                             </td>
                             <td style="width:250px;">
